# course-generator-agent

./: .cursorrules  .gitignore  CLAUDE.md  CURSOR.md  README.md  env.example  pyproject.toml
.claude/skills/: pdf_digitalizer.md  url_digitalizer.md
.claude/skills/pdf-digitalizer/: POST_PROCESSING.md  SKILL.md
.claude/skills/url-digitalizer/: SKILL.md  reference.md
.cursor/rules/: agent-patterns.mdc  architecture.mdc  async-patterns.mdc  development.mdc  llm-integration.mdc  state-management.mdc
.github/workflows/: ci.yml
LLMs/: api_keys.py
LLMs/imagetext2text/: __init__.py  factory.py
LLMs/imagetext2text/pixtral/: __init__.py  client.py
LLMs/text2text/: __init__.py  factory.py  health_check.py
LLMs/text2text/deepseek/: client.py
LLMs/text2text/gemini/: client.py
LLMs/text2text/groq/: client.py
LLMs/text2text/mistral/: client.py
LLMs/text2text/openai/: client.py
agents/: __init__.py
agents/activities_generator/: __init__.py  agent.py  prompts.py
agents/base/: __init__.py  parallel_processor.py
agents/bibliography_generator/: __init__.py  __main__.py  agent.py  prompts.py
agents/html_formatter/: __init__.py  agent.py  exporter.py  prompts.py
agents/image_generator/: __init__.py  __main__.py  agent.py  batch_image_generator.py  prompts.py
agents/image_search/: __init__.py  agent.py
agents/image_selector/: README.md  __init__.py  agent.py  prompts.py
agents/index_generator/: __init__.py  agent.py  prompts.py  utils.py
agents/md_digitalizer/: __init__.py  parser.py  restructurer.py
agents/mind_map_generator/: __init__.py  agent.py  prompts.py
agents/pdf_index_generator/: __init__.py  agent.py  prompts.py  utils.py
agents/people_generator/: __init__.py  agent.py
agents/people_search/: __init__.py  agent.py
agents/podcast_generator/: __init__.py  __main__.py  agent.py  prompts.py
agents/section_html_generator/: __init__.py  agent.py  prompts.py
agents/section_theory_generator/: agent.py  prompts.py
agents/video_generator/: __init__.py  agent.py
agents/video_html/: __init__.py  __main__.py  agent.py
agents/video_html_generator/: __init__.py  __main__.py  agent.py
agents/video_search/: __init__.py  agent.py  prompts.py
evaluation/: __init__.py  dataset.py  embedding_metrics.py  nlp_metrics.py  state.py  structure_metrics.py  workflow.py
evaluation/metrics/: __init__.py  embedding_metrics.py  nlp_metrics.py  structure_metrics.py
evaluators/: __init__.py  base.py
evaluators/activities_evaluator/: __init__.py  evaluator.py  prompts.py
evaluators/html_evaluator/: __init__.py  evaluator.py  prompts.py
evaluators/index_evaluator/: __init__.py  evaluator.py  prompts.py
evaluators/overall_evaluator/: __init__.py  evaluator.py  prompts.py
evaluators/pdf_index_evaluator/: __init__.py  evaluator.py  prompts.py
evaluators/section_evaluator/: __init__.py  evaluator.py  prompts.py
main/: __init__.py  output_manager.py  state.py  workflow.py  workflow_book.py  workflow_digitalize.py  workflow_pdf.py  workflow_pdf2podcast.py  workflow_podcast.py
main/config/: __init__.py  activities.py  base.py  bibliography.py  html.py  image.py  podcast.py
main/nodes/: __init__.py  content.py  digitalize.py  extras.py  formatting.py  index.py  metadata.py
notebooks/: pixtral_small.ipynb
tests/: test_elevenlabs_tts.py
tools/: __init__.py  web_image_extractor.py
tools/articlesearch/: __init__.py  __main__.py  factory.py
tools/articlesearch/arxiv/: __init__.py  client.py
tools/articlesearch/openalex/: __init__.py  client.py
tools/articlesearch/semanticscholar/: __init__.py  client.py
tools/booksearch/: __init__.py  factory.py
tools/booksearch/googlebooks/: __init__.py  client.py
tools/booksearch/openlibrary/: __init__.py  client.py
tools/imagesearch/: __init__.py  bing_scraper.py  ddg.py  factory.py  openverse.py
tools/imagesearch/bing/: client.py
tools/imagesearch/ddg/: __init__.py  client.py
tools/imagesearch/freepik/: client.py
tools/imagesearch/google/: client.py
tools/imagesearch/openverse/: client.py
tools/json2book/: __init__.py  __main__.py  generator.py  utils.py
tools/json2book/templates/: academic.tex
tools/pdf2md/docling/: __init__.py  converter.py
tools/pdf_book/: __init__.py  __main__.py  factory.py  generator.py  utils.py
tools/pdf_book/templates/: academic.tex
tools/peoplesearch/: __init__.py  __main__.py  factory.py  models.py  search.py  suggester.py
tools/peoplesearch/wikipedia/: __init__.py  client.py
tools/podcast/: __init__.py  __main__.py  audio_utils.py  base_engine.py  edge_engine.py  factory.py  models.py  text_preprocessor.py  tts_engine.py
tools/podcast/chatterbox/: __init__.py  client.py
tools/podcast/coqui/: __init__.py  client.py
tools/podcast/edge/: __init__.py  client.py
tools/podcast/elevenlabs/: __init__.py  client.py
tools/podcast/mlx_tts/: __init__.py  client.py
tools/podcast/openai_tts/: __init__.py  client.py
tools/podcast/qwen_tts/: __init__.py  client.py
tools/video_generator/: __init__.py  generator.py
tools/videosearch/: __init__.py  factory.py
tools/videosearch/bing/: client.py
tools/videosearch/youtube/: __init__.py  client.py
tools/websearch/: __init__.py  ddg.py  factory.py  search.py  tavily.py
tools/websearch/ddg/: client.py
tools/websearch/tavily/: __init__.py  client.py
tools/websearch/wikipedia/: client.py
video/: video_generator.py
workflows/: audience_profiles.py  state.py  workflow_digitalize.py  workflow_pdf2podcast.py
workflows/config/: activities.py  bibliography.py  mindmap.py  people.py  research.py  video.py
workflows/nodes/: content.py  utils.py
