[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "course-generator-agent"
version = "0.1.0"
description = "AI-powered course content generator"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    "langchain-groq",
    "langchain-mistralai",
    "langchain==0.3.27",
    "langchain-openai==0.3.35",
    "langchain-community==0.3.30",
    "langchain-google-genai",
    "langchain-tavily",
    "pydantic",
    "langgraph==0.6.7",
    "ddgs",
    "requests",
    "beautifulsoup4",
    "langsmith==0.4.31",
    "wikipedia",
    "docling",
    "easyocr>=1.7.0"  # PDF to Markdown conversion
]

[project.optional-dependencies]
# Optional dependencies for advanced visualization
visualization = [
    "pygraphviz",  # Requires system GraphViz: brew install graphviz
]
# Optional dependencies for alternative rendering methods
rendering = [
    "pyppeteer",  # Alternative to playwright
]
# Optional dependencies for evaluation
evaluation = [
    "textstat==0.7.11",
    "langdetect==1.0.9",
    "nltk==3.9.2",
    "sentence-transformers==5.1.2",
]
# Optional dependencies for Freepik image scraper
# Run: playwright install chromium after installing
scraper = [
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
]

[tool.setuptools.packages.find]
include = ["agents*", "main*", "tools*", "evaluators*", "evaluation*"]
