[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "course-generator-agent"
version = "0.1.0"
description = "AI-powered course content generator"
authors = [{name = "Your Name", email = "your.email@example.com"}]
dependencies = [
    # LangChain ecosystem
    "langchain==0.3.27",
    "langchain-core==0.3.81",
    "langchain-community==0.3.30",
    "langchain-openai==0.3.35",
    "langchain-deepseek==0.1.4",
    "langchain-groq==0.3.8",
    "langchain-mistralai==0.2.12",
    "langchain-google-genai==2.0.4",
    "langchain-tavily==0.2.13",
    "langgraph==0.6.7",
    "langsmith==0.4.31",
    # Core
    "pydantic==2.11.9",
    "requests==2.32.5",
    "beautifulsoup4==4.13.5",
    # Web search
    "ddgs==9.6.0",
    "wikipedia==1.4.0",
    # PDF to Markdown conversion (requires pandas>=2.1.4)
    "docling==2.63.0",
    "easyocr==1.7.2",
    # Note: ocrmac is macOS-only, moved to optional dependencies
    # Image search / browser automation
    "playwright==1.55.0",
    "playwright-stealth==2.0.0",
    # ML / Transformers
    "transformers>=4.38.0",
    "tokenizers>=0.19.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    # TTS for podcast generation (Edge TTS - default, no pandas conflict)
    "edge-tts>=7.0.0",
    # Audio manipulation
    "pydub>=0.25.1",
    "mutagen>=1.47.0",
    # PDF book generation (image processing)
    "Pillow>=10.0.0",
    # Data (pandas 2.x required by docling)
    "pandas>=2.1.4",
    "jsonlines>=4.0.0",
    # Video search (YouTube metadata extraction)
    "yt-dlp>=2024.1.0",
]

[project.optional-dependencies]
# macOS-only: Native OCR using Apple Vision framework
# Install on macOS: pip install -e ".[macos-ocr]"
macos-ocr = [
    "ocrmac==1.0.0",  # Only works on macOS, requires pyobjc
]

# =============================================================================
# SYSTEM DEPENDENCIES (not Python packages)
# =============================================================================
# PDF Book Generation requires LaTeX:
#   macOS:   brew install --cask basictex  (or mactex for full install)
#   Ubuntu:  sudo apt-get install texlive-latex-base texlive-fonts-recommended texlive-latex-extra biber
#   Windows: Install MiKTeX from https://miktex.org/download
# After install, run: eval "$(/usr/libexec/path_helper)" or restart terminal
# =============================================================================
# Coqui TTS - INCOMPATIBLE with docling (requires pandas<2.0)
# Install separately if needed: pip install TTS==0.22.0
# Note: This will downgrade pandas and break docling
coqui-tts = [
    "TTS==0.22.0",
]
# Optional dependencies for alternative rendering methods
rendering = [
    "pyppeteer",
]
# Optional dependencies for evaluation
evaluation = [
    "textstat==0.7.11",
    "langdetect==1.0.9",
    "nltk==3.9.2",
    "sentence-transformers==5.1.2",
]

[tool.setuptools.packages.find]
include = ["agents*", "main*", "tools*", "evaluators*", "evaluation*"]
